# PB_2025_equipe1

./: README.md
firmware_esp/: CMakeLists.txt  platformio.ini
firmware_esp/lib/comunicacao/: cominicacao.h  comunicacao.c
firmware_esp/lib/def/: def.c  def.h
firmware_esp/lib/encoder/: encoder.c  encoder.h
firmware_esp/lib/h_bridge/: h_bridge.c  h_bridge.h
firmware_esp/lib/pid/: pid.c  pid.h
firmware_esp/lib/tasks/: tasks.c  tasks.h
firmware_esp/lib/uart_communication/: uart_communication.c  uart_communication.h
firmware_esp/src/: main.c
raspycodes/: Imgpross.py  debugingcode(with_gui).py  main.py  main_visão.py  serial_com.py  teste_rs.py
robot_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
robot_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.fish  setup.fish  setup.sh
robot_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
robot_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
robot_ws/devel/.private/realsense2_camera/: .catkin  .rosinstall  local_setup.fish  local_setup.sh
robot_ws/devel/.private/realsense2_camera/share/realsense2_camera/cmake/: realsense2_camera-msg-paths.cmake
robot_ws/devel/.private/realsense2_description/: .catkin  .rosinstall  setup.sh
robot_ws/devel/.private/realsense2_description/lib/pkgconfig/: realsense2_description.pc
robot_ws/devel/.private/robot_communication/: .catkin  local_setup.fish
robot_ws/devel/.private/robot_communication/include/robot_communication/: encoder_comm.h  velocity_comm.h  vision_pattern.h
robot_ws/devel/.private/robot_communication/lib/pkgconfig/: robot_communication.pc
robot_ws/devel/.private/robot_communication/lib/robot_communication/: mqtt_comm.py  uart_comm.py
robot_ws/devel/.private/robot_general/: .catkin  .rosinstall  local_setup.sh  setup.fish
robot_ws/devel/.private/robot_general/lib/pkgconfig/: robot_general.pc
robot_ws/devel/.private/robot_movement/: .catkin  .rosinstall  local_setup.fish  setup.fish
robot_ws/devel/.private/robot_movement/lib/pkgconfig/: robot_movement.pc
robot_ws/devel/.private/robot_movement/lib/robot_movement/: hw_interface_node  mov_controller.py
robot_ws/devel/.private/robot_vision/: .catkin  _setup_util.py  local_setup.sh  setup.fish  setup.sh
robot_ws/devel/.private/robot_vision/lib/pkgconfig/: robot_vision.pc
robot_ws/devel/.private/robot_vision/lib/robot_vision/: vision.py
robot_ws/devel/include/robot_communication/: encoder_comm.h  velocity_comm.h  vision_pattern.h
robot_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  realsense2_camera.pc  robot_communication.pc  robot_general.pc  robot_movement.pc  robot_vision.pc
robot_ws/devel/lib/python3/dist-packages/robot_communication/: __init__.py
robot_ws/devel/lib/robot_communication/: mqtt_comm.py  uart_comm.py
robot_ws/devel/lib/robot_movement/: controller.py  hw_interface_node  mov_controller.py
robot_ws/devel/lib/robot_vision/: vision.py
robot_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
robot_ws/devel/share/gennodejs/ros/robot_communication/: _index.js
robot_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_cameraConfig.cmake
robot_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
robot_ws/devel/share/robot_communication/cmake/: robot_communication-msg-extras.cmake  robot_communication-msg-paths.cmake  robot_communicationConfig-version.cmake  robot_communicationConfig.cmake
robot_ws/devel/share/robot_general/cmake/: robot_generalConfig-version.cmake  robot_generalConfig.cmake
robot_ws/devel/share/robot_movement/cmake/: robot_movementConfig-version.cmake  robot_movementConfig.cmake
robot_ws/devel/share/robot_vision/cmake/: robot_visionConfig-version.cmake  robot_visionConfig.cmake
robot_ws/devel/share/roseus/ros/robot_communication/: manifest.l
robot_ws/logs/realsense2_camera/: build.make.000.log.stderr
robot_ws/logs/robot_vision/: build.cmake.000.log.stderr
robot_ws/src/robot_communication/: CMakeLists.txt
robot_ws/src/robot_communication/launch/: communication.launch
robot_ws/src/robot_communication/msg/: encoder_comm.msg  velocity_comm.msg  vision_pattern.msg
robot_ws/src/robot_communication/scripts/: mqtt_comm.py  uart_comm.py
robot_ws/src/robot_general/: CMakeLists.txt
robot_ws/src/robot_general/launch/: general.launch
robot_ws/src/robot_movement/: CMakeLists.txt
robot_ws/src/robot_movement/config/: wheel_specification.yaml
robot_ws/src/robot_movement/include/: hw_interface.hpp
robot_ws/src/robot_movement/launch/: movement.launch
robot_ws/src/robot_movement/scripts/: backup.py  backup2.py  just_move.py  mov_controller.py  teste_angular.py  teste_linear.py
robot_ws/src/robot_movement/src/: hw_interface.cpp
robot_ws/src/robot_vision/: CMakeLists.txt  package.xml
robot_ws/src/robot_vision/config/: vision_params.yaml
robot_ws/src/robot_vision/launch/: vision.launch
robot_ws/src/robot_vision/msg/: vision_pattern.msg
robot_ws/src/robot_vision/scripts/: new_vision.py  vision.py  vision_teste.py
(+42 files in other folders)
