<?xml version="1.0"?>
<package format="2">
  <name>robot_vision</name>
  <version>0.0.0</version>
  <description>The robot_vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rosUsr@todo.todo">rosUsr</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>robot_communication</depend>
  <depend>numpy</depend>
  <depend>cv2</depend>
  <depend>yaml</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
